# youtube_image_viewer

./: Cargo.toml  bitcoin.tiff  cock_fight.tiff  hello_youtube.csv
github_files/: grayscale_conversion.rs  hello_world.rs  load_file2.rs  metadata.md
images/: blank_.tiff  cell5.tif  cock_fight.tiff  helllo_youtube.csv  output.tiff  scale.csv  scale.md  watermarked.tiff  watermarked_.tiff
src/: main.rs
src/files/: blur_image.rs  composite_image.rs  cropping_images.rs  cursor1.rs  load_file.rs  load_file1.rs  pan_zoom_image.rs  pixel_manipulation.rs  resizing_images.rs  rotate_image.rs
src/menu/: mod.rs
src/menu/edit/: mod.rs
src/menu/edit/crop/: aspect_ratio.rs  mod.rs  (+1 more)
src/menu/file/: exit.rs  mod.rs  open.rs  save.rs
src/scientific/: mod.rs  types.rs
src/scientific/analysis/: cell_analysis.rs  cell_statistics.rs  colocalization.rs  intensity_profile.rs  mod.rs
src/scientific/calibration/: mod.rs  spatial_calibration.rs
src/scientific/layers/: annotation.rs  channel.rs  metadata.rs  mod.rs
src/scientific/rendering/: frame_renderer.rs  mod.rs  scale_renderer.rs
src/scientific/reporting/: calibration_report.rs  mod.rs
src/scientific/state/: mod.rs  scientific_state.rs
src/scientific/tools/: mod.rs
src/scientific/ui/: calibration_dialog.rs  channel_dialog.rs  measurement_dialog.rs  mod.rs  profile_dialog.rs  roi_dialog.rs  scale_dialog.rs
src/scientific/visualization/: cell_plots.rs  mod.rs
src/state/: filter_state.rs  layer_state.rs  mod.rs  watermark_state.rs
src/utils/: blend_utils.rs  image.rs  image_data.rs  mod.rs  template_utils.rs
(+84 files in other folders)
