[package]
name = "youtube_image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
minifb = "0.27.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.12"
epub = "1.2"
base64 = "0.13"
url = "2.2"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
tiff = "0.9"
thiserror = "1.0"
kamadak-exif = "0.5.4"
fltk = { version = "1.5.2", features = ["fltk-shared"] }
fltk-theme = "0.7"
open = "3.2"
rusttype = "0.9.3"
lazy_static = "1.4"
